# AI_Quant

./: pyproject.toml
app/: main.py
app/api/: routes.py
app/core/: config.py
app/detectors/: absorption.py  aggressive_flow.py  spoofing.py
app/models/: schemas.py
app/services/: llm.py  tool_executor.py  tool_registry.py
app/strategies/: breakout.py  moving_average.py
app/tools/: anomaly.py  backtest.py  market_data.py  risk.py
app/utils/: serializers.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Chat.tsx  Message.tsx
frontend/src/components/analytics/: BacktestCard.tsx  SignalCard.tsx
frontend/src/components/chat/: Chat.tsx  MessageBubble.tsx  MessageList.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx
frontend/src/lib/: api.ts  parser.ts
scripts/: test_anomaly.py  test_backtest.py  test_orchestration.py  test_tools.py
